Remember entry types left unchecked in the import dialog
Confirming the dialog now also records the unchecked entry types, so the
same library does not ask again until its definition or the stored one
changes. Cancelling still asks again next time.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018tfaFPHdgNjTV734jHSCoj